--- a/index.html
+++ b/index.html
@@ -3,8 +3,8 @@
 </head>
 <body>
     <ul>
-        <li>click <a href="./Folder_html/list1.html">here</a> to go see list1.html</li>
-        <li>click <a href="./Folder_html/list2.html">here</a> to go see list2.html</li>
+        <li>click <a href="./data/list1.html">here</a> to go see list1.html</li>
+        <li>click <a href="./data/list2.html">here</a> to go see list2.html</li>
     </ul>
     <h1>HTML</h1>
     <p style="margin-left:90px;margin-right:100px;">
