--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
         HTML describes the structure of a web page semantically and originally
          included cues for the appearance of the document.
     </p>
-    <img src="./data/a.jpg" height="70%" width="70%">
+    <img src="./data/a.jpg" height="100px">
     <p style="margin-top:45px;">
     HTML elements are the building blocks of HTML pages.
      With HTML constructs, images and other objects, such as interactive forms,
