--- a/data/list1.html
+++ b/data/list1.html
@@ -7,6 +7,7 @@
     <body>
         <h1>Hello! Welcome to list1.html!</h1>
         <h3>holy yeah! you did it!</h3>
+        <img src="../images/waaaa.jpg">
         <p>you can go back to test.html to click <a href="../index.html">here</a>.</p>
     </body>
 </html>
