--- a/data/list2.html
+++ b/data/list2.html
@@ -7,6 +7,7 @@
     <body>
         <h1>Hello! Welcome to list2.html!</h1>
         <h3>holy yeah! you did it!</h3>
+        <img src="../images/punch.jpg">
         <p>you can go back to test.html to click <a href="../index.html">here</a>.</p>
     </body>
 </html>
