--- a/index.html
+++ b/index.html
@@ -1,12 +1,34 @@
 <head>
     <title>this is just test html</title>
+    <style tpye="text/css">
+    img {width: 300px;}
+    </style>
+    <script>
+    var cnt = 1;
+    function imgToggle(){
+        var img1=document.getElementById("img1");
+
+        if(cnt%3==1){
+            img1.src="images/san2.jpg";
+        }else if(cnt%3==2){
+            img1.src="images/san3.jpg";
+        }else{
+            img1.src="images/san1.jpg";
+        }
+        cnt++;
+    }
+    </script>
 </head>
 <body>
     <ul>
         <li>click <a href="./data/list1.html">here</a> to go see list1.html</li>
         <li>click <a href="./data/list2.html">here</a> to go see list2.html</li>
     </ul>
-    <h1>HTML</h1>
+    <input type="button" value="산화 산화" onclick="imgToggle()">
+    <br>
+    <img src="images/san1.jpg" id="img1" height="500px">
+
+    <img src="./images/a.jpg" height="500px">
     <p style="margin-left:90px;margin-right:100px;">
     Hypertext Markup Language (HTML) is the standard markup language for
      <strong>creating <u>web</u> pages</strong>
@@ -14,13 +36,5 @@
        or from local storage and render them into multimedia web pages.
         HTML describes the structure of a web page semantically and originally
          included cues for the appearance of the document.
-    </p>
-    <img src="./data/a.jpg" height="500px">
-    <p style="margin-top:45px;">
-    HTML elements are the building blocks of HTML pages.
-     With HTML constructs, images and other objects, such as interactive forms,
-      may be embedded into the rendered page. It provides a means to create structured documents
-       by denoting structural semantics for text such as headings, paragraphs, lists, links,
-        quotes and other items. HTML elements are delineated by tags, written using angle brackets.
     </p>
 </body>
