--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
     <title>this is just test html</title>
     <style tpye="text/css">
     body {color:brown;}
+
     #container{
         background: #079760;
         height:300px;
@@ -55,9 +56,10 @@
         <div id='item'>2번칸</div>
         </strong>
     </div>
-
-    <input type="button" value="산화 산화" onclick="imgToggle()">
+    <a href="./data/list1.html" onclick="window.open(this.href, '_blank', 'width=600px,height=500px,toolbars=no,scrollbars=no'); return false;">list1.html popup</a>
+    <br>
     <input type="button" value="보이기" onclick="imgShow()">
+    <input type="button" value="산화 산화" onclick="imgToggle()">
     <br>
     <img src="images/san1.jpg" id="img1" height="500px">
 
