--- a/index.html
+++ b/index.html
@@ -1,21 +1,6 @@
 <head>
     <title>this is just test html</title>
-    <style tpye="text/css">
-    body {color:brown;}
-
-    #container{
-        background: #079760;
-        height:300px;
-        width: 70%;
-    }
-    #item{
-        border: 1px solid #cccccc;
-        height: 50px;
-        width:50%;
-        margin:0 auto;
-        text-align:center;
-    }
-    </style>
+    <link rel="stylesheet" href="index.css"/>
     <script>
     var cnt = 1;
     var show = true;
