--- a/index.html
+++ b/index.html
@@ -1,35 +1,36 @@
 <head>
     <title>this is just test html</title>
-    <link rel="stylesheet" href="index.css"/>
+    <link rel="stylesheet" href="index.css" />
     <script>
-    var cnt = 1;
-    var show = true;
-    function imgShow(){
-        var img=document.getElementById("img1");
-        show=!show;
-        if(show){
-            img.src="images/san1.jpg";
-            cnt=1;
-        }
-        else
-            img.src="images/waaaa.jpg";
-    }
-
-    function imgToggle(){
-        var img=document.getElementById("img1");
-
-        if(show){
-            if(cnt%3==1)
-                img.src="images/san2.jpg";
-            else if(cnt%3==2)
-                img.src="images/san3.jpg";
+        var cnt = 1;
+        var show = true;
+        function imgShow() {
+            var img = document.getElementById("img1");
+            show = !show;
+            if (show) {
+                img.src = "images/san1.jpg";
+                cnt = 1;
+            }
             else
-                img.src="images/san1.jpg";
-            cnt++;
+                img.src = "images/waaaa.jpg";
         }
-    }
+
+        function imgToggle() {
+            var img = document.getElementById("img1");
+
+            if (show) {
+                if (cnt % 3 == 1)
+                    img.src = "images/san2.jpg";
+                else if (cnt % 3 == 2)
+                    img.src = "images/san3.jpg";
+                else
+                    img.src = "images/san1.jpg";
+                cnt++;
+            }
+        }
     </script>
 </head>
+
 <body style="background-color:aquamarine">
     <ul>
         <li>click <a href="./data/list1.html">here</a> to go see list1.html</li>
@@ -37,11 +38,13 @@
     </ul>
     <div id="container">
         <strong>
-        <div id='item'>1번칸</div>
-        <div id='item'>2번칸</div>
+            <div id='item'>1번칸</div>
+            <div id='item'>2번칸</div>
         </strong>
     </div>
-    <a href="./data/list1.html" onclick="window.open(this.href, '_blank', 'width=600px,height=500px,toolbars=no,scrollbars=no'); return false;">list1.html popup</a>
+    <a href="./data/list1.html"
+        onclick="window.open(this.href, '_blank', 'width=600px,height=500px,toolbars=no,scrollbars=no'); return false;">list1.html
+        popup</a>
     <br>
     <input type="button" value="보이기" onclick="imgShow()">
     <input type="button" value="산화 산화" onclick="imgToggle()">
